[package]
name = "bevy_exploration"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy-inspector-egui = "0.11.0"
bevy_rapier3d = { version = "0.14.1", features = ["debug-render"] }
bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
